--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -1,7 +1,6 @@
 {% extends "maquetado.html" %}
 
-<!--Este es un template distinto a todos, por eso
-            rededine el blocke "content" -->
+<!--Este es un template distinto a todos, por eso redefine el blocke "content" -->
 {% block content %}
 
         <div class="row-fluid" style="margin-bottom:20px;">
@@ -32,7 +31,7 @@
                         </p>
                         </form>
                     </div>
-                </div>               
+                </div>
             </div>
             <div class="span5">
                 <h2>Registrate gratis!</h2>
