--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -43,7 +43,7 @@
                             <div class="tab-pane" id="2">
                                 <form class="well">
                                     <div class="input-append">
-                                        <input type="text" size="16" id="inputLinea" class="span9" placeholder="Linea, ramal, recorrido">
+                                        <input type="text" size="16" id="inputLinea" class="span9" placeholder="Linea, ramal, recorrido" data-provide="typeahead">
                                         <span class="add-on"><i class="icon-search"></i></span>
                                     </div>
                                     <button class="btn btn-primary" type="submit">Buscar</button>
@@ -66,8 +66,9 @@
 {% endblock %}
 
 {% block custom_scripts %}
+<script type="text/javascript" src="/media/js/bootstrap-typeahead-gist2204728.js"></script>
 <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
-    
+
 <script type="text/javascript">
 $(function() {
     $("#sidebar").css("margin-top", "18px")
@@ -203,7 +204,26 @@ $(function() {
     
     clickHandler.activate()
     dragControl.activate()
-    
+ 
+    $('#inputLinea').typeahead({
+        source: function (typeahead, query) {
+            $.ajax({
+                url: "/api/recorridos/?q="+query,
+                success: function (data) {
+                    // data must be a list of either strings or objects
+                    // data = [{'nombre': 'Joe',.. }, {'name': 'Henry'}, ...]
+                    typeahead.process(data)
+                    mostrarResultados(data)
+                }
+            })
+        },
+        onselect: function (obj) {
+            //alert('Selected '+obj)
+            mostrarResultados([obj])
+        },
+        property: "nombre",
+        timeout: 100
+    })
 
     resultados = new Object()
     poly = null
@@ -268,7 +288,25 @@ $(function() {
 
 <script id="itemTempl" type="text/x-jquery-tmpl"> 
     <li id="res${id}">
-        <a href="#" onclick="javascript:$.cb.mostrar_resultado(${id});return false">${nombre}</a>
+        <a href="#" onclick="javascript:$.cb.mostrar_resultado(${id});return false">
+            <table>
+				<tr>
+					<td>
+						<strong>${nombre}</strong>
+						<br>
+						de ${inicio} a ${fin}
+						<br>
+						a pie: ${long_pata}km
+						<br>
+						en bondi:${long_bondi}km
+					</td>
+					<td>
+						<a class="btn btn-small" title="Editar recorrido"><i class="icon-pencil"></i></a>
+						<a class="btn btn-small" title="Reportar recorrido erróneo"><i class="icon-flag"></i></a>
+					</td>
+				</tr>
+            </table>
+        </a>
     </li>
 </script>
 
