agregando link a la encuesta

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,6 +33,9 @@
                 {% endif %}
             {% endif %}
             </ul>
+            <ul class="nav pull-right">
+                <li><a href="https://spreadsheets.google.com/spreadsheet/viewform?formkey=dFJERlREQjUyaE1iSkFDYnhOa2Nnbmc6MQ+"><i class="icon-pencil icon-white"></i> Ayudanos completando la encuesta</a></li>
+            </ul>
         </div>
     </div>
   </div>
