--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -70,7 +70,7 @@
 <script type="text/javascript" src="/media/js/bootstrap-typeahead-gist2204728.js"></script>
 <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
-<link rel="stylesheet" href="http://openlayers.org/dev/theme/default/style.css" type="text/css" />
+{# <link rel="stylesheet" href="http://openlayers.org/dev/theme/default/style.css" type="text/css" /> #}
 
 
 <script type="text/javascript">
